src/components/sidebar/components/sidebar-nav/style.module.css
.sidebarNavElement {
  padding-top: 8px;
  position: relative;
  /* necessary as otherwise the skipToMainContent
     link causes x-overflow */
  overflow: hidden;
}

.sidebarNavLabel {
  composes: hds-typography-body-200 from global;
  composes: hds-font-weight-semibold from global;
  color: var(--token-color-neutral-foreground-faint);
  margin-bottom: 12px;
  padding: 0 8px;
}

.skipToMainContent {
  composes: focus-border-and-box-shadow-light from global;
  background-color: white;
  border-radius: 5px;
  box-shadow: 0 0 0 3px #5990ff, 0 1px 1px rgba(101, 106, 118, 0.05),
    0 2px 2px rgba(101, 106, 118, 0.05);
  color: var(--token-color-palette-blue-200);
  font-size: 14px;
  font-weight: 500;
  line-height: 18px;
  padding: 8px;
  position: absolute;
  right: -10000px;
  top: 4px;
  width: fit-content;
  z-index: 1;

  &:focus {
    right: 4px;
  }

  &:hover {
    text-decoration: underline;
  }
}

.sidebarNavList {
  list-style: none;
  margin: 0;
  padding: 0;
}

